add shortcode registration; add video shortcode

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
     {{ site.title }}
+
+<div class="video-container" style="position:relative;padding-bottom:56.25%;height: 0;width: 100%"> <iframe style="height:100%;width:100%;position:absolute;top:0" src="https://youtube.com/embed/Y4IyJYP42PY?" frameborder="0" allow="; encrypted-media" allowfullscreen >Your browser does not support iframes</iframe> </div>
+
+<div class="video-container" style="position:relative;padding-bottom:56.25%;height: 0;width: 100%"> <iframe style="height:100%;width:100%;position:absolute;top:0" src="https://player.vimeo.com/video/245096988?" frameborder="0" allow="; encrypted-media" allowfullscreen >Your browser does not support iframes</iframe> </div>
+
 </body>
 </html>
